fixed some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html{
-    @apply text-[62.5%];
-    @apply scroll-smooth;
+html {
+  @apply text-[62.5%];
+  @apply scroll-smooth;
 }
 ::-webkit-scrollbar {
-    width: 0px;
-  }
-  ::-webkit-scrollbar-track {
-    background: transparent;
-  }
-  ::-webkit-scrollbar-thumb {
-    /* background: #888; */
-  }
+  @apply w-0;
+}
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
 
-body{
-    @apply text-[1.6rem] font-sans;
+body {
+  @apply text-[1.6rem] font-sans;
 }
